--- a/templates/config-wb-mir_v2_buttons.json.jinja
+++ b/templates/config-wb-mir_v2_buttons.json.jinja
@@ -4,7 +4,7 @@
 {% set FIRST_INPUT = 1 -%}
 {
     "title": "WB-MIR-v.2_template_title",
-    "device_type": "tpl1_WB-MIR v2",
+    "device_type": "tpl1_wb_mir_v2",
     "group": "g-wb",
     "hw": [
         {
