Set press_counter reg_type

--- a/templates/config-wb-led.json.jinja
+++ b/templates/config-wb-led.json.jinja
@@ -1343,7 +1343,7 @@
             },
             {
                 "name": "Input {{in_num}} Counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "order": 1,
                 "address": {{32 + in_num - 1}},
                 "type": "value",
@@ -1353,7 +1353,7 @@
             {
                 "name": "Input {{in_num}} Single Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "order": 1,
                 "address": {{464 + in_num -1}},
                 "type": "value",
@@ -1364,7 +1364,7 @@
             {
                 "name": "Input {{in_num}} Long Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "order": 1,
                 "address": {{480 + in_num - 1}},
                 "type": "value",
@@ -1375,7 +1375,7 @@
             {
                 "name": "Input {{in_num}} Double Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "order": 1,
                 "address": {{496 + in_num - 1}},
                 "type": "value",
@@ -1386,7 +1386,7 @@
             {
                 "name": "Input {{in_num}} Shortlong Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "order": 1,
                 "address": {{512 + in_num - 1}},
                 "type": "value",
