--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -516,7 +516,7 @@
             {
                 "id": "input_{{index + 1}}_counter",
                 "name": "Input {{index + 1}} Counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{32 + index}},
                 "type": "value",
                 "sporadic": true,
@@ -526,7 +526,7 @@
             {
                 "id": "input_{{index + 1}}_single_press_counter",
                 "name": "Input {{index + 1}} Single Press Counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{464 + index}},
                 "type": "value",
                 "sporadic": true,
@@ -537,7 +537,7 @@
             {
                 "id": "input_{{index + 1}}_long_press_counter",
                 "name": "Input {{index + 1}} Long Press Counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{480 + index}},
                 "type": "value",
                 "sporadic": true,
@@ -548,7 +548,7 @@
             {
                 "id": "input_{{index + 1}}_double_press_counter",
                 "name": "Input {{index + 1}} Double Press Counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{496 + index}},
                 "type": "value",
                 "sporadic": true,
@@ -559,7 +559,7 @@
             {
                 "id": "input_{{index + 1}}_shortlong_press_counter",
                 "name": "Input {{index + 1}} Shortlong Press Counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{512 + index}},
                 "type": "value",
                 "sporadic": true,
