--- a/templates/config-wb-mao4.json.jinja
+++ b/templates/config-wb-mao4.json.jinja
@@ -696,7 +696,7 @@
             },
             {
                 "name": "Input {{index + 1}} Counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{32 + index}},
                 "type": "value",
                 "sporadic": true,
@@ -705,7 +705,7 @@
             },
             {
                 "name": "Input {{index + 1}} Short Press Counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{464 + index}},
                 "type": "value",
                 "sporadic": true,
@@ -714,7 +714,7 @@
             },
             {
                 "name": "Input {{index + 1}} Long Press Counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{480 + index}},
                 "type": "value",
                 "sporadic": true,
@@ -723,7 +723,7 @@
             },
             {
                 "name": "Input {{index + 1}} Double Press Counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{496 + index}},
                 "type": "value",
                 "sporadic": true,
@@ -732,7 +732,7 @@
             },
             {
                 "name": "Input {{index + 1}} Short Long Press Counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 "address": {{512 + index}},
                 "type": "value",
                 "sporadic": true,
