--- a/templates/config-wb-mr3.json.jinja
+++ b/templates/config-wb-mr3.json.jinja
@@ -582,7 +582,7 @@
             },
             {
                 "name": "Input {{in_num}} counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 39,
                 {% else -%}
@@ -612,7 +612,7 @@
             {
                 "name": "Input {{in_num}} Single Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 471,
                 {% else -%}
@@ -626,7 +626,7 @@
             {
                 "name": "Input {{in_num}} Long Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 487,
                 {% else -%}
@@ -640,7 +640,7 @@
             {
                 "name": "Input {{in_num}} Double Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 503,
                 {% else -%}
@@ -654,7 +654,7 @@
             {
                 "name": "Input {{in_num}} Shortlong Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 519,
                 {% else -%}
