--- a/templates/config-wb-mr6c-nc.json.jinja
+++ b/templates/config-wb-mr6c-nc.json.jinja
@@ -389,7 +389,7 @@
             },
             {
                 "name": "Input {{in_num}} counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 39,
                 {% else -%}
@@ -419,7 +419,7 @@
             {
                 "name": "Input {{in_num}} Single Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 471,
                 {% else -%}
@@ -433,7 +433,7 @@
             {
                 "name": "Input {{in_num}} Long Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 487,
                 {% else -%}
@@ -447,7 +447,7 @@
             {
                 "name": "Input {{in_num}} Double Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 503,
                 {% else -%}
@@ -461,7 +461,7 @@
             {
                 "name": "Input {{in_num}} Shortlong Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 519,
                 {% else -%}
