--- a/templates/config-wb-mrwm2.json.jinja
+++ b/templates/config-wb-mrwm2.json.jinja
@@ -523,7 +523,7 @@
             },
             {
                 "name": "Input {{in_num}} counter",
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 39,
                 {% else -%}
@@ -553,7 +553,7 @@
             {
                 "name": "Input {{in_num}} Single Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 471,
                 {% else -%}
@@ -567,7 +567,7 @@
             {
                 "name": "Input {{in_num}} Long Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 487,
                 {% else -%}
@@ -581,7 +581,7 @@
             {
                 "name": "Input {{in_num}} Double Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 503,
                 {% else -%}
@@ -595,7 +595,7 @@
             {
                 "name": "Input {{in_num}} Shortlong Press Counter",
                 "enabled": false,
-                "reg_type": "input",
+                "reg_type": "press_counter",
                 {% if in_num == 0 -%}
                 "address": 519,
                 {% else -%}
