Use press_counter type only for real press counters

--- a/templates/config-wb-m1w2-buttons.json.jinja
+++ b/templates/config-wb-m1w2-buttons.json.jinja
@@ -169,7 +169,7 @@
             },
             {
                 "name": "Input {{in_num}} counter",
-                "reg_type": "press_counter",
+                "reg_type": "input",
                 "format": "u16",
                 "address": {{277 + in_num - 1}},
                 "type": "value",
