--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -516,7 +516,7 @@
             {
                 "id": "input_{{index + 1}}_counter",
                 "name": "Input {{index + 1}} Counter",
-                "reg_type": "press_counter",
+                "reg_type": "input",
                 "address": {{32 + index}},
                 "type": "value",
                 "sporadic": true,
