--- a/templates/config-wb-mao4.json.jinja
+++ b/templates/config-wb-mao4.json.jinja
@@ -696,7 +696,7 @@
             },
             {
                 "name": "Input {{index + 1}} Counter",
-                "reg_type": "press_counter",
+                "reg_type": "input",
                 "address": {{32 + index}},
                 "type": "value",
                 "sporadic": true,
