--- a/templates/config-wb-mcm8.json.jinja
+++ b/templates/config-wb-mcm8.json.jinja
@@ -211,7 +211,7 @@
             },
             {
                 "name": "Input {{in_num}} counter",
-                "reg_type": "press_counter",
+                "reg_type": "input",
                 "format": "u32",
                 "address": {{60 + (in_num - 1) * 2}},
                 "type": "value",
