--- a/templates/config-wb-mdm3.json.jinja
+++ b/templates/config-wb-mdm3.json.jinja
@@ -536,7 +536,7 @@
             },
             {
                 "name": "Input {{ch_number + 1}} counter",
-                "reg_type": "press_counter",
+                "reg_type": "input",
                 "address": {{32 + ch_number}},
                 "type": "value",
                 "group": "input_{{ch_number + 1}}_counters",
