--- a/templates/config-wb-mrgbw-d-fw3.json.jinja
+++ b/templates/config-wb-mrgbw-d-fw3.json.jinja
@@ -2390,7 +2390,7 @@
             },
             {
                 "name": "Input {{in_num}} Counter",
-                "reg_type": "press_counter",
+                "reg_type": "input",
                 "order": 1,
                 "address": {{32 + in_num - 1}},
                 "type": "value",
