--- a/templates/config-wb-mrm2-mini-nc.json.jinja
+++ b/templates/config-wb-mrm2-mini-nc.json.jinja
@@ -388,7 +388,7 @@
             },
             {
                 "name": "Input {{in_num}} counter",
-                "reg_type": "press_counter",
+                "reg_type": "input",
                 {% if in_num == 0 -%}
                 "address": 39,
                 {% else -%}
