--- a/templates/config-wb-mwac2.json.jinja
+++ b/templates/config-wb-mwac2.json.jinja
@@ -527,7 +527,7 @@
             },
             {
                 "name": "Input {{ letter }}{{ in_num }} Counter",
-                "reg_type": "press_counter",
+                "reg_type": "input",
                 "address": {{ 32 + (in_num - 1) }},
                 "type": "value",
                 "sporadic": true,
