--- a/templates/config-wb-led.json.jinja
+++ b/templates/config-wb-led.json.jinja
@@ -1343,7 +1343,7 @@
             },
             {
                 "name": "Input {{in_num}} Counter",
-                "reg_type": "press_counter",
+                "reg_type": "input",
                 "order": 1,
                 "address": {{32 + in_num - 1}},
                 "type": "value",
