--- a/templates/config-wb-mwac.json.jinja
+++ b/templates/config-wb-mwac.json.jinja
@@ -333,7 +333,7 @@
             },
             {
                 "name": "{{ letter }}{{ in_num - in_num_offset }} Counter",
-                "reg_type": "press_counter",
+                "reg_type": "input",
                 "address": {{ 31 + in_num}},
                 "type": "value",
                 "sporadic": true,
@@ -342,7 +342,7 @@
             },
             {
                 "name": "{{ letter }}{{ in_num - in_num_offset }} Counter",
-                "reg_type": "press_counter",
+                "reg_type": "input",
                 "address": {{ 31 + in_num}},
                 "type": "value",
                 "condition": "isDefined(in{{ in_num }}_mode)==0||in{{ in_num }}_mode==3",
