--- a/templates/config-oni-plc-w-acs-0800-imp.json.jinja
+++ b/templates/config-oni-plc-w-acs-0800-imp.json.jinja
@@ -4,6 +4,6 @@
         group = "g-oni",
         device_name = "PLC-W-ACS-0800-IMP",
         device_id = "oni-plc-w-acs-0800-imp",
-        has_signature = false %}
+        has_signature = true %}
 {% include "config-wb-mcm8.json.jinja" %}
 {% endwith %}
