--- a/templates/config-oni-plc-w-ema-0304.json.jinja
+++ b/templates/config-oni-plc-w-ema-0304.json.jinja
@@ -4,6 +4,6 @@
         group = "g-oni",
         device_name = "PLC-W-EMA-0304",
         device_id = "oni-plc-w-ema-0304",
-        has_signature = false %}
+        has_signature = true %}
 {% include "config-wb-mao4.json.jinja" %}
 {% endwith %}
