--- a/templates/config-oni-plc-w-ema-06u00.json.jinja
+++ b/templates/config-oni-plc-w-ema-06u00.json.jinja
@@ -4,6 +4,6 @@
         group = "g-oni",
         device_name = "PLC-W-EMA-06U00",
         device_id = "oni-plc-w-ema-06u00",
-        has_signature = false %}
+        has_signature = true %}
 {% include "config-wb-mai6.json.jinja" %}
 {% endwith %}
