--- a/templates/config-oni-plc-w-emd-0706.json.jinja
+++ b/templates/config-oni-plc-w-emd-0706.json.jinja
@@ -4,6 +4,6 @@
         group = "g-oni",
         device_name = "PLC-W-EMD-0706",
         device_id = "oni-plc-w-emd-0706",
-        has_signature = false %}
+        has_signature = true %}
 {% include "config-wb-mr6c.json.jinja" %}
 {% endwith %}
