--- a/templates/config-wb-mai6.json.jinja
+++ b/templates/config-wb-mai6.json.jinja
@@ -4,7 +4,7 @@
 {% set group = group | default("g-wb") -%}
 {% set device_name = device_name | default("WB-MAI6") -%}
 {% set device_id = device_id | default("wb-mai6") -%}
-{% set has_signature = has_signature | default(true) -%}
+{% set has_signature = has_signature | default(false) -%}
 
 {% set CHANNELS_NUMBER = 6 -%}
 {% set TYPES_WITH_GAIN = [3, 257] -%}
