--- a/templates/config-wb-mao4.json.jinja
+++ b/templates/config-wb-mao4.json.jinja
@@ -4,7 +4,7 @@
 {% set group = group | default("g-wb") -%}
 {% set device_name = device_name | default("WB-MAO4") -%}
 {% set device_id = device_id | default("wb-mao4") -%}
-{% set has_signature = has_signature | default(true) -%}
+{% set has_signature = has_signature | default(false) -%}
 
 {% set INPUTS_NUMBER = 3 -%}
 {% set OUTPUTS_NUMBER = 4 -%}
