--- a/templates/config-wb-mcm8.json.jinja
+++ b/templates/config-wb-mcm8.json.jinja
@@ -4,7 +4,7 @@
 {% set group = group | default("g-wb") -%}
 {% set device_name = device_name | default("WB-MCM8") -%}
 {% set device_id = device_id | default("wb-mcm8") -%}
-{% set has_signature = has_signature | default(true) -%}
+{% set has_signature = has_signature | default(false) -%}
 
 {% set INPUTS_NUMBER = 8 -%}
 {% set FIRST_INPUT = 1 -%}
