--- a/templates/config-wb-mr6c.json.jinja
+++ b/templates/config-wb-mr6c.json.jinja
@@ -4,7 +4,7 @@
 {% set group = group | default("g-wb") -%}
 {% set device_name = device_name | default("WB-MR6C") -%}
 {% set device_id = device_id | default("wb-mr6c") -%}
-{% set has_signature = has_signature | default(true) -%}
+{% set has_signature = has_signature | default(false) -%}
 
 {% set OUTPUTS_NUMBER = 6 -%}
 {% set CURTAINS_NUMBER = OUTPUTS_NUMBER // 2 -%}
