support up to 80 IR commands instead of 40, as in documantation, fix "RS485 responce delay" parameter translation

--- a/templates/config-wb-mir_v2_buttons.json.jinja
+++ b/templates/config-wb-mir_v2_buttons.json.jinja
@@ -1,5 +1,5 @@
 {% set FIRST_ROM = 1 -%}
-{% set LAST_ROM = 40 -%}
+{% set LAST_ROM = 80 -%}
 {% set INPUTS_NUMBER = 1 -%}
 {% set FIRST_INPUT = 1 -%}
 {
@@ -443,6 +443,7 @@
                 "IR Commands": "ИК-команды",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
+                "RS-485 Response Delay (ms)": "Задержка перед ответом по RS-485 (мс)",
                 "Status LED": "Индикатор состояния",
                 "Enabled": "Активен",
                 "Baud rate": "Скорость обмена",
@@ -458,7 +459,7 @@
 
                 "Reset all ROM": "Стереть все команды в ROM",
                 "Play from BANK": "Воспроизвести команду из соответствующего банка ROM",
-                "BANK -> RAM":"Редактирование ИК-команд в банке с копированием в RAM",
+                "BANK -> RAM": "Редактирование ИК-команд в банке с копированием в RAM",
                 "Learn to BANK": "Записать команду в соответствующий банк ROM",
                 
                 "temperature_readings_filter_deg_title": "Фильтр ошибочных значений датчика 1-Wire (°C)",
