--- a/templates/config-wb-mir_v3.json.jinja
+++ b/templates/config-wb-mir_v3.json.jinja
@@ -183,14 +183,6 @@
 
             {% for rom in range(FIRST_ROM, LAST_ROM + 1) -%}
             {
-                "name": "Learn to ROM{{ rom }}",
-                "reg_type": "coil",
-                "address": {{ 5300 + rom - 1 }},
-                "type": "switch",
-                "group": "ir_commands",
-                "enabled": false
-            },
-            {
                 "name": "ROM{{ rom }} size",
                 "reg_type": "input",
                 "address": {{ 5400 + rom - 1 }},
@@ -198,6 +190,14 @@
                 "enabled": false
             },
             {% set enabled = "true" if rom < 11 else "false" -%}
+            {
+                "name": "Learn to ROM{{ rom }}",
+                "reg_type": "coil",
+                "address": {{ 5300 + rom - 1 }},
+                "type": "switch",
+                "group": "ir_commands",
+                "enabled": {{ enabled }}
+            },
             {
                 "name": "Play from ROM{{ rom }}",
                 "reg_type": "coil",
