--- a/templates/config-wb-mai6.json.jinja
+++ b/templates/config-wb-mai6.json.jinja
@@ -991,10 +991,11 @@
                 "group": "hw_info"
             },
             {
-                "name": "Supply voltage",
+                "name": "Supply Voltage",
                 "reg_type": "input",
                 "address": 121,
                 "type": "voltage",
+                "units": "V",
                 "scale": 0.001,
                 "enabled": false,
                 "group": "hw_info"
@@ -1067,7 +1068,7 @@
                 "IN_P_title": "Channel P",
                 "IN_N_title": "Channel N",
                 "external_voltage_divider_description": "External voltage divider is used to measure voltage higher than 30V and to get higher input resistance. Output voltage of the divider should be in the range from 0 to 4V (better to 2V). Supported since firmware version 2.1.0."
-                "Supply voltage": "5V Supply",
+                "Supply Voltage": "5V Supply",
             },
             "ru": {
                 "template_title": "{{ title_ru }}",
@@ -1201,7 +1202,7 @@
                 "Internal Temperature": "Температура внутри модуля",
                 "Serial": "Серийный номер",
                 "FW Version": "Версия прошивки",
-                "Supply voltage": "Напряжение 5В",
+                "Supply Voltage": "Напряжение 5В",
                 "Uptime": "Время работы с момента включения",
                 "ADC Loop Duration": "Время цикла опроса АЦП",
                 "ADC Loop Counter": "Счетчик циклов опроса АЦП",
