--- a/templates/config-wb-mai6.json.jinja
+++ b/templates/config-wb-mai6.json.jinja
@@ -994,7 +994,7 @@
                 "name": "Supply Voltage",
                 "reg_type": "input",
                 "address": 121,
-                "type": "voltage",
+                "type": "value",
                 "units": "V",
                 "scale": 0.001,
                 "enabled": false,
@@ -1023,7 +1023,8 @@
                 "reg_type": "input",
                 "address": 123,
                 "scale": 0.001,
-                "type": "voltage",
+                "type": "value",
+                "units": "V",
                 "enabled": false,
                 "group": "hw_info"
             },
