--- a/templates/config-wb-mai6.json.jinja
+++ b/templates/config-wb-mai6.json.jinja
@@ -991,7 +991,7 @@
                 "group": "hw_info"
             },
             {
-                "name": "Supply Voltage",
+                "name": "Internal 5V Bus Voltage",
                 "reg_type": "input",
                 "address": 121,
                 "type": "value",
@@ -1068,8 +1068,7 @@
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
                 "IN_P_title": "Channel P",
                 "IN_N_title": "Channel N",
-                "external_voltage_divider_description": "External voltage divider is used to measure voltage higher than 30V and to get higher input resistance. Output voltage of the divider should be in the range from 0 to 4V (better to 2V). Supported since firmware version 2.1.0.",
-                "Supply Voltage": "5V Supply"
+                "external_voltage_divider_description": "External voltage divider is used to measure voltage higher than 30V and to get higher input resistance. Output voltage of the divider should be in the range from 0 to 4V (better to 2V). Supported since firmware version 2.1.0."
             },
             "ru": {
                 "template_title": "{{ title_ru }}",
@@ -1203,7 +1202,7 @@
                 "Internal Temperature": "Температура внутри модуля",
                 "Serial": "Серийный номер",
                 "FW Version": "Версия прошивки",
-                "Supply Voltage": "Напряжение 5В",
+                "Internal 5V Bus Voltage": "Напряжение внутренней шины 5В",
                 "Uptime": "Время работы с момента включения",
                 "ADC Loop Duration": "Время цикла опроса АЦП",
                 "ADC Loop Counter": "Счетчик циклов опроса АЦП",
