add "Command size in RAM" for v3

--- a/templates/config-wb-mir_v3.json.jinja
+++ b/templates/config-wb-mir_v3.json.jinja
@@ -167,7 +167,12 @@
 
         "channels": [
             {
-                "name": "Learn to RAM",
+                "name": "Command size in RAM",
+                "reg_type": "input",
+                "address": 5520,
+                "group": "ir_commands",
+                "enabled": false
+            },
                 "reg_type": "coil",
                 "address": 5001,
                 "type": "switch",
