disable "Learn to RAM" and "Play from RAM" by default for v3

--- a/templates/config-wb-mir_v3.json.jinja
+++ b/templates/config-wb-mir_v3.json.jinja
@@ -176,14 +176,16 @@
                 "reg_type": "coil",
                 "address": 5001,
                 "type": "switch",
-                "group": "ir_commands"
+                "group": "ir_commands",
+                "enabled": false
             },
             {
                 "name": "Play from RAM",
                 "reg_type": "coil",
                 "address": 5002,
                 "type": "pushbutton",
-                "group": "ir_commands"
+                "group": "ir_commands",
+                "enabled": false
             },
 
             {% for rom in range(FIRST_ROM, LAST_ROM + 1) -%}
